--- a/build.gradle
+++ b/build.gradle
@@ -12,17 +12,19 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
         classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
         classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.0'
     }
 }
 
-apply plugin: 'forge'
+apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'idea'
 
 minecraft {
-    version = "1.8-11.14.1.1306"
+    version = '1.8.9-11.15.0.1697'
+    runDir = "run"
+    mappings = "snapshot_20160113"
 }
 
 jar {
